Colaboratory를 통해 생성됨

--- a/stock-etc/99-03-rnn-lot.ipynb
+++ b/stock-etc/99-03-rnn-lot.ipynb
@@ -74,7 +74,7 @@
       },
       "source": [
         "# 마지막 회차 번호\n",
-        "noEnd ='970' \n",
+        "noEnd ='974' \n",
         "\n",
         "# url\n",
         "# url = 'https://dhlottery.co.kr/gameResult.do?method=allWinExel&gubun=byWin&nowPage=&drwNoStart=1&drwNoEnd={}'.format(noEnd)\n",
@@ -241,9 +241,9 @@
         "id": "SVEov0queYO1"
       },
       "source": [
-        "# 당첨번호 추출\n",
-        "bonus_number = df_lot['당첨번호보너스'].to_numpy()\n",
+        "# 당첨번호 및 보너스번호 추출\n",
         "lotto_numbers = df_lot[['당첨번호1','당첨번호2','당첨번호3', '당첨번호4', '당첨번호5', '당첨번호6']].to_numpy()\n",
+        "bonus_number = df_lot['당첨번호보너스'].to_numpy()\n",
         "lotto_numbers"
       ],
       "id": "SVEov0queYO1",
@@ -253,47 +253,119 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WjXEnyBJg3ct"
+        "id": "NlREtUKLd_1s"
       },
       "source": [
         "# 당첨번호 onehot 인코딩\n",
-        "onehot_lotto_numbers = list(map(lotto2onehot, lotto_numbers))\n",
-        "\n",
-        "row_count = len(onehot_lotto_numbers)\n",
-        "\n",
-        "x_samples = onehot_lotto_numbers[0:row_count-1]\n",
-        "y_samples = onehot_lotto_numbers[1:row_count]"
+        "onehot_lotto_numbers = list(map(lotto2onehot, lotto_numbers))"
       ],
-      "id": "WjXEnyBJg3ct",
+      "id": "NlREtUKLd_1s",
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gDwqxOlOhznj"
+        "id": "NWh6XajCTr_O"
       },
       "source": [
-        "np.shape(onehot_lotto_numbers)"
+        "print(onehot2lotto(onehot_lotto_numbers[-1]))"
       ],
-      "id": "gDwqxOlOhznj",
+      "id": "NWh6XajCTr_O",
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EvVQ8ZEti57E"
+        "id": "2V4UFOsZRZn6"
       },
       "source": [
-        "# train, valid, test set으로 분리\n",
+        "# make X and Y data\n",
+        "WINDOW_SIZE = 8\n",
+        "x_data = []\n",
+        "y_data = []\n",
+        "for i in range(len(onehot_lotto_numbers)-WINDOW_SIZE):\n",
+        "    x_data.append([onehot_lotto_numbers[i:i+WINDOW_SIZE-1]])\n",
+        "    y_data.append(onehot_lotto_numbers[i+WINDOW_SIZE])\n",
+        "\n",
+        "print(onehot2lotto(y_data[-1]))"
+      ],
+      "id": "2V4UFOsZRZn6",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y0iRM-7nT2q5"
+      },
+      "source": [
+        "print(f'x_data.shape: {np.shape(x_data)}, y_data.shape: {np.shape(y_data)}')"
+      ],
+      "id": "Y0iRM-7nT2q5",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZN5wBU3NcHnn"
+      },
+      "source": [
+        "# reshape\n",
+        "x_data = np.reshape(x_data, (-1,WINDOW_SIZE-1, 45))\n",
+        "y_data = np.reshape(y_data, (-1, 45))\n",
+        "x_data.shape"
+      ],
+      "id": "ZN5wBU3NcHnn",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H-yKR7ngkWki"
+      },
+      "source": [
+        "x_data = tf.constant(x_data)\n",
+        "y_data = tf.constant(y_data)"
+      ],
+      "id": "H-yKR7ngkWki",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "anNGpgVkfL1m"
+      },
+      "source": [
+        "# 데이터셋 분리\n",
         "train_idx = (0, 800)\n",
         "valid_idx = (801, 900)\n",
-        "test_idx = (901, len(onehot_lotto_numbers))\n",
+        "test_idx = (900, len(y_data))\n",
         "\n",
-        "print(f'train: {train_idx}, valid: {valid_idx}, test: {test_idx}')"
+        "x_train = x_data[train_idx[0]:train_idx[1]]\n",
+        "y_train = y_data[train_idx[0]:train_idx[1]]\n",
+        "x_val = x_data[valid_idx[0]:valid_idx[1]]\n",
+        "y_val = y_data[valid_idx[0]:valid_idx[1]]\n",
+        "x_test = x_data[test_idx[0]:test_idx[1]]\n",
+        "y_test = y_data[test_idx[0]:test_idx[1]]"
       ],
-      "id": "EvVQ8ZEti57E",
+      "id": "anNGpgVkfL1m",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aCrJzNKXg80K"
+      },
+      "source": [
+        "x_train.shape"
+      ],
+      "id": "aCrJzNKXg80K",
       "execution_count": null,
       "outputs": []
     },
@@ -310,16 +382,12 @@
         "from tensorflow.keras import layers\n",
         "from tensorflow.keras import models\n",
         "\n",
-        "batch_size = 32\n",
-        "lotto_size = 45\n",
-        "embedding_dim = 256\n",
-        "rnn_units = 256\n",
-        "\n",
+        "rnn_units = 7\n",
         "\n",
         "# 모델을 정의합니다.\n",
-        "model = keras.Sequential([\n",
-        "    # keras.layers.Embedding(lotto_size, embedding_dim, batch_input_shape=[batch_size, None]),                      \n",
-        "    keras.layers.LSTM(rnn_units, return_sequences=False, stateful=True, recurrent_initializer='glorot_uniform'),\n",
+        "model = keras.Sequential([              \n",
+        "    # keras.layers.LSTM(rnn_units, return_sequences=False, stateful=True, recurrent_initializer='glorot_uniform'),\n",
+        "    keras.layers.LSTM(rnn_units, return_sequences=False),\n",
         "    keras.layers.Dense(45, activation='sigmoid')\n",
         "])\n",
         "\n",
@@ -327,18 +395,6 @@
         "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
       ],
       "id": "qygEYZDymjzg",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "mjBafcmxCIMc"
-      },
-      "source": [
-        "model.summary()"
-      ],
-      "id": "mjBafcmxCIMc",
       "execution_count": null,
       "outputs": []
     },
@@ -370,34 +426,10 @@
         "id": "sA9XuTjCnNkV"
       },
       "source": [
-        "EPOCHS=10\n",
-        "\n",
-        "x_train = x_samples[train_idx[0]:train_idx[1]]\n",
-        "y_train = y_samples[train_idx[0]:train_idx[1]]\n",
-        "\n",
-        "x_val = x_samples[valid_idx[0]:valid_idx[1]]\n",
-        "y_val = y_samples[valid_idx[0]:valid_idx[1]]\n",
-        "\n",
-        "x_test = x_samples[test_idx[0]:test_idx[1]]\n",
-        "y_test = y_samples[test_idx[0]:test_idx[1]]\n",
-        "\n",
-        "# history = model.fit(x_train, y_train, epochs=EPOCHS, callbacks=[checkpoint_callback])\n",
-        "\n",
-        "history = model.fit(x_train, y_train, epochs=EPOCHS, validation_data=(x_val, y_val), callbacks=[checkpoint_callback])"
+        "EPOCHS=1000\n",
+        "history = model.fit(x_train, y_train, epochs=EPOCHS, batch_size = 32, validation_data=(x_val, y_val), callbacks=[checkpoint_callback])"
       ],
       "id": "sA9XuTjCnNkV",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SGmtHdO0Pdxc"
-      },
-      "source": [
-        "np.shape(x_val)"
-      ],
-      "id": "SGmtHdO0Pdxc",
       "execution_count": null,
       "outputs": []
     },
@@ -415,10 +447,10 @@
         "acc_ax = loss_ax.twinx()\n",
         "\n",
         "loss_ax.plot(history.history['loss'], 'y', label='train loss')\n",
-        "# loss_ax.plot(history.history['val_loss'], 'r', label='val loss')\n",
+        "loss_ax.plot(history.history['val_loss'], 'r', label='val loss')\n",
         "\n",
         "acc_ax.plot(history.history['accuracy'], 'b', label='train acc')\n",
-        "# acc_ax.plot(history.history['val_acc'], 'g', label='val acc')\n",
+        "acc_ax.plot(history.history['val_accuracy'], 'g', label='val acc')\n",
         "\n",
         "loss_ax.set_xlabel('epoch')\n",
         "loss_ax.set_ylabel('loss')\n",
@@ -436,22 +468,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "snWp42FdNmMu"
-      },
-      "source": [
-        "np.shape(x_val)"
-      ],
-      "id": "snWp42FdNmMu",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "2t3APFPXMJ3c"
       },
       "source": [
-        "del model"
+        "pred = model.predict(x_test)\n",
+        "pred"
       ],
       "id": "2t3APFPXMJ3c",
       "execution_count": null,
@@ -460,12 +481,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JEFB0PANNhMQ"
+        "id": "kSdroTfZsyu5"
       },
       "source": [
         ""
       ],
-      "id": "JEFB0PANNhMQ",
+      "id": "kSdroTfZsyu5",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ALgsOe_3s0GJ"
+      },
+      "source": [
+        ""
+      ],
+      "id": "ALgsOe_3s0GJ",
       "execution_count": null,
       "outputs": []
     }
