Colaboratory를 통해 생성됨

--- a/stock-etc/99-03-rnn-lot.ipynb
+++ b/stock-etc/99-03-rnn-lot.ipynb
@@ -386,8 +386,9 @@
         "\n",
         "# 모델을 정의합니다.\n",
         "model = keras.Sequential([              \n",
-        "    # keras.layers.LSTM(rnn_units, return_sequences=False, stateful=True, recurrent_initializer='glorot_uniform'),\n",
-        "    keras.layers.LSTM(rnn_units, return_sequences=False),\n",
+        "    keras.layers.LSTM(rnn_units, return_sequences=False, stateful=True, recurrent_initializer='glorot_uniform'),\n",
+        "    # keras.layers.LSTM(rnn_units, batch_input_shape=(None, 7, 45), return_sequences=True, stateful=False),\n",
+        "    # keras.layers.LSTM(rnn_units, return_sequences=True, stateful=False),\n",
         "    keras.layers.Dense(45, activation='sigmoid')\n",
         "])\n",
         "\n",
@@ -426,8 +427,8 @@
         "id": "sA9XuTjCnNkV"
       },
       "source": [
-        "EPOCHS=1000\n",
-        "history = model.fit(x_train, y_train, epochs=EPOCHS, batch_size = 32, validation_data=(x_val, y_val), callbacks=[checkpoint_callback])"
+        "EPOCHS=100\n",
+        "history = model.fit(x_train, y_train, epochs=EPOCHS, batch_size = 1, validation_data=(x_val, y_val), callbacks=[checkpoint_callback])"
       ],
       "id": "sA9XuTjCnNkV",
       "execution_count": null,
@@ -471,7 +472,7 @@
         "id": "2t3APFPXMJ3c"
       },
       "source": [
-        "pred = model.predict(x_test)\n",
+        "pred = model(x_test)\n",
         "pred"
       ],
       "id": "2t3APFPXMJ3c",
@@ -481,24 +482,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kSdroTfZsyu5"
+        "id": "cT7xPrA1T_19"
       },
       "source": [
-        ""
+        "del model"
       ],
-      "id": "kSdroTfZsyu5",
+      "id": "cT7xPrA1T_19",
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ALgsOe_3s0GJ"
+        "id": "I-DjzLjyUAxh"
       },
       "source": [
         ""
       ],
-      "id": "ALgsOe_3s0GJ",
+      "id": "I-DjzLjyUAxh",
       "execution_count": null,
       "outputs": []
     }
